# capyau_bot

./: .gitignore  br.dbf  br.shp  main.py  pyproject.toml
